# HW_1_MNP

./: CMakeLists.txt  NumbersHandler.cpp  NumbersHandler.h  README.md  main.cpp  rapidcsv.h
data/: Numbering_plan.csv
include/: NumbersHandler.h
source/: NumbersHandler.cpp  NumbersHandler.h  main.cpp
